It should be "venue" not "venues" as we only have one place this year

--- a/2018/src/html/_partial/speaker.ejs
+++ b/2018/src/html/_partial/speaker.ejs
@@ -12,7 +12,7 @@ var entries = Object.values(calendar).reduce((entries, cal) => {
       }
     }
   }
-  return entr
+  return entries;
 }, []);
 
 let href = `#speaker-${id}`
