--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -77,7 +77,7 @@ var page = {
 
     <!-- Schedule -->
     <div class="home-schedule">
-      <h2 class="home-subhead">Schedule</h2>
+      <h2 class="home-subhead">Schedules</h2>
 
       <div class="home-scheduleBody">
 
