Show schedule links

--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -21,7 +21,7 @@ var page = {
       <nav class="navigation">
         <ul class="navigation-list cover-navigationList">
           <li><a href="speakers.html" class="navigation-target">Speakers</a></li>
-          <li><a href="schedules.html" class="navigation-target">Schedules</a></li>
+          <li><a href="#schedules" class="navigation-target">Schedules</a></li>
           <li><a href="venues.html" class="navigation-target">Venues</a></li>
           <li><a href="sponsors.html" class="navigation-target">Sponsors</a></li>
         </ul>
@@ -75,30 +75,7 @@ var page = {
       </div>
     </div>
 
-    <!-- Schedule -->
-    <div class="home-schedule">
-      <h2 class="home-subhead">Schedules</h2>
-
-      <div class="home-scheduleBody">
-
-        <div class="home-scheduleSection">
-          <%- include('_partial/timetable-conference') -%>
-
-        </div>
-
-        <div class="home-scheduleSection">
-          <%- include('_partial/timetable-interactive') -%>
-
-        </div>
-
-        <div class="home-scheduleNote">
-          <p>※ セッションの内容／時間は変更になる可能性があります。</p>
-          <p>※ セッションは日本語・英語で行われます。</p>
-          <p>※ 26日のNode School, Workshopにはご自身のマシンをご用意ください。</p>
-        </div>
-
-      </div>
-    </div>
+    <%- include('_partial/schedules') -%>
 
     <div class="home-venues">
       <h2 class="home-subhead">Venue</h2>
@@ -108,8 +85,6 @@ var page = {
     </div>
 
   </div>
-
-  <%# include('_partial/cfp') -%>
 
   <div class="home-sponsors">
     <h2 class="home-subhead home-sponsorsSubhead">Sponsors</h2>
