--- a/2018/src/html/_partial/schedules.ejs
+++ b/2018/src/html/_partial/schedules.ejs
@@ -1,4 +1,4 @@
-<!-- CFP Links -->
+<!-- CFP Links ではなくSchedule LinksではあるがUIとして流用・・ -->
 <section class="cfp" id="schedules">
   <div class="cfp-inner">
     <header class="cfp-header">
