Use sponsor-pr partial at sponsor page

--- a/2018/src/html/sponsors.ejs
+++ b/2018/src/html/sponsors.ejs
@@ -21,7 +21,7 @@ var page = {
           <h3 class="prs-grade">Platinum</h3>
           <ul class="prs-list -platinum">
             <li>
-              <%- include('./_partial/sponsor', { id: 'recruit', grade: 'platinum' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'recruit', grade: 'platinum' }) %>
             </li>
           </ul>
         </div>
@@ -29,16 +29,16 @@ var page = {
           <h3 class="prs-grade">Gold</h3>
           <ul class="prs-list -gold">
             <li>
-              <%- include('./_partial/sponsor', { id: 'bitbank', grade: 'gold' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'bitbank', grade: 'gold' }) %>
             </li>
             <li>
-              <%- include('./_partial/sponsor', { id: 'dwango', grade: 'gold' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'dwango', grade: 'gold' }) %>
             </li>
             <li>
-              <%- include('./_partial/sponsor', { id: 'gms', grade: 'gold' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'gms', grade: 'gold' }) %>
             </li>
             <li>
-              <%- include('./_partial/sponsor', { id: 'mercari', grade: 'gold' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'mercari', grade: 'gold' }) %>
             </li>
           </ul>
         </div>
@@ -46,25 +46,25 @@ var page = {
           <h3 class="prs-grade">Silver</h3>
           <ul class="prs-list -silver">
             <li>
-              <%- include('./_partial/sponsor', { id: 'medley', grade: 'silver' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'medley', grade: 'silver' }) %>
             </li>
             <li>
-              <%- include('./_partial/sponsor', { id: 'pxgrid', grade: 'silver' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'pxgrid', grade: 'silver' }) %>
             </li>
             <li>
-              <%- include('./_partial/sponsor', { id: 'supership', grade: 'silver' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'supership', grade: 'silver' }) %>
             </li>
             <li>
-              <%- include('./_partial/sponsor', { id: 'future', grade: 'silver' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'future', grade: 'silver' }) %>
             </li>
             <li>
-              <%- include('./_partial/sponsor', { id: 'scrapbox', grade: 'silver' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'scrapbox', grade: 'silver' }) %>
             </li>
             <li>
-              <%- include('./_partial/sponsor', { id: 'cybozu', grade: 'silver' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'cybozu', grade: 'silver' }) %>
             </li>
             <li>
-              <%- include('./_partial/sponsor', { id: 'cyberagent', grade: 'silver' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'cyberagent', grade: 'silver' }) %>
             </li>
           </ul>
         </div>
@@ -72,7 +72,7 @@ var page = {
           <h3 class="prs-grade">Bronze</h3>
           <ul class="prs-list -venue">
             <li>
-              <%- include('./_partial/sponsor', { id: 'yumemi', grade: 'bronze' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'yumemi', grade: 'bronze' }) %>
             </li>
           </ul>
         </div>
@@ -80,7 +80,7 @@ var page = {
           <h3 class="prs-grade">Venue</h3>
           <ul class="prs-list -venue">
             <li>
-              <%- include('./_partial/sponsor', { id: 'yahoo', grade: 'venue' }) %>
+              <%- include('./_partial/sponsor-pr', { id: 'yahoo', grade: 'venue' }) %>
             </li>
           </ul>
         </div>
