Fixed inconsistency after rebase

--- a/2018/src/html/_partial/schedules.ejs
+++ b/2018/src/html/_partial/schedules.ejs
@@ -7,12 +7,12 @@
     <div class="cfp-body">
       <div class="cfp-action">
         <div class="cfp-button">
-          <a href="https://docs.google.com/spreadsheets/d/1vLhgBunwjIBGUz1HvSrGAQnwZGJjrrCkFPBOUNbluSU/edit#gid=0" class="Button -conference" target="_blank">
+          <a href="schedule.html#conference" class="Button -conference">
             Day 1
           </a>
         </div>
         <div class="cfp-button">
-          <a href="https://docs.google.com/spreadsheets/d/1vLhgBunwjIBGUz1HvSrGAQnwZGJjrrCkFPBOUNbluSU/edit#gid=1574731806" class="Button -interactive" target="_blank">
+          <a href="schedule.html#interactive" class="Button -interactive">
             Day 2
           </a>
         </div>
