Fix: Lightning talk times.

--- a/2018/src/html/_partial/speaker.ejs
+++ b/2018/src/html/_partial/speaker.ejs
@@ -17,7 +17,9 @@ var entries = Object.values(calendar).reduce((entries, cal) => {
               data: Object.assign(
                 Object.assign({}, subEntry),
                 {
-                  summary: `${entry.summary}: ${subEntry.summary}`
+                  summary: `${entry.summary}: ${subEntry.summary}`,
+                  start: entry.start,
+                  end: entry.end
                 }
               ),
               timeZone: cal.googleObject.timeZone,
