Added warning if speaker doesn't have a presentation. And fixed name of Mr. Tatsuno in calendar.

--- a/2018/src/html/_partial/speaker.ejs
+++ b/2018/src/html/_partial/speaker.ejs
@@ -34,6 +34,10 @@ var entries = Object.values(calendar).reduce((entries, cal) => {
   return entries;
 }, []);
 
+if (entries.length === 0) {
+  console.log(`Warning: no entry found for speaker ${id}`)
+}
+
 let href = `#speaker-${id}`
 if (link) {
   href = `speakers.html${href}`
