--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -1,14 +1,3 @@
-<%
-var page = {
-  speakers: [
-    'addaleax',
-    'ohhoe',
-    'littledan',
-    'indutny',
-    'tushuhei',
-  ]
-}
-%>
 <%- include('_layout/header') -%>
 
 <%- include('_partial/svg') -%>
@@ -61,11 +50,16 @@ var page = {
       <h2 class="home-subhead">Featured Speakers</h2>
 
       <ul class="speakers-list">
-        <% page.speakers.forEach(function(id) { %>
+        <%
+          Object.values(speakers).forEach(function(speaker) {
+            if (speaker.featured) {
+          %>
         <li>
-          <%- include('_partial/speaker', { id, link: true }) -%>
+          <%- include('_partial/speaker', { id: speaker.id, link: true }) -%>
         </li>
-        <% }); %>
+        <%
+            }
+          }); %>
       </ul>
       <div class="home-speakersAction">
         <a href="speakers.html" class="Button -primary">
