--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -130,6 +130,9 @@
         <li>
           <%- include('./_partial/sponsor', { id: 'cyberagent', grade: 'silver' }) %>
         </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'dmm', grade: 'silver' }) %>
+        </li>
       </ul>
     </div>
     <div class="sponsors-section">
@@ -137,6 +140,9 @@
       <ul class="sponsors-list -venue">
         <li>
           <%- include('./_partial/sponsor', { id: 'yumemi', grade: 'bronze' }) %>
+        </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'finc', grade: 'bronze' }) %>
         </li>
       </ul>
     </div>
