Added tickets to the site.

--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -13,6 +13,7 @@
           <li><a href="venues.html" class="navigation-target">Venue</a></li>
           <li><a href="schedule.html" class="navigation-target">Schedule</a></li>
           <li><a href="sponsors.html" class="navigation-target">Sponsors</a></li>
+          <li><a href="#tickets" class="navigation-target -button">Tickets</a></li>
         </ul>
         <button class="navigation-button">
           <svg xmlns="http://www.w3.org/2000/svg" class="navigation-icon"><use xlink:href="#close"></use></svg>
@@ -78,6 +79,8 @@
     </div>
 
   </div>
+
+  <%- include('_partial/tickets') -%>
 
   <div class="home-sponsors">
     <h2 class="home-subhead home-sponsorsSubhead">Sponsors</h2>
