Fix finc as silver sponsor

--- a/2018/src/html/sponsors.ejs
+++ b/2018/src/html/sponsors.ejs
@@ -69,6 +69,9 @@ var page = {
             <li>
               <%- include('./_partial/sponsor-pr', { id: 'dmm', grade: 'silver' }) %>
             </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'finc', grade: 'silver' }) %>
+            </li>
           </ul>
         </div>
         <div class="prs-section">
@@ -76,9 +79,6 @@ var page = {
           <ul class="prs-list -bronze">
             <li>
               <%- include('./_partial/sponsor-pr', { id: 'yumemi', grade: 'bronze' }) %>
-            </li>
-            <li>
-              <%- include('./_partial/sponsor-pr', { id: 'finc', grade: 'bronze' }) %>
             </li>
           </ul>
         </div>
