--- a/2018/src/html/index.ejs
+++ b/2018/src/html/index.ejs
@@ -133,6 +133,9 @@
         <li>
           <%- include('./_partial/sponsor', { id: 'dmm', grade: 'silver' }) %>
         </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'finc', grade: 'silver' }) %>
+        </li>
       </ul>
     </div>
     <div class="sponsors-section">
@@ -140,9 +143,6 @@
       <ul class="sponsors-list -venue">
         <li>
           <%- include('./_partial/sponsor', { id: 'yumemi', grade: 'bronze' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'finc', grade: 'bronze' }) %>
         </li>
       </ul>
     </div>
