--- a/2018/src/scss/main.scss
+++ b/2018/src/scss/main.scss
@@ -1219,6 +1219,7 @@ $hex-image: $hex-canvas * $hex-ratio;
   }
 }
 .overlay-content {
+  max-height: 100vh;
   background-color: $color-whitefog;
   @include over-md {
     margin-left: auto;
