Using `scroll-` prefix as browser scroll by default to id-ed anchors.

--- a/2018/src/html/_partial/tickets.ejs
+++ b/2018/src/html/_partial/tickets.ejs
@@ -1,5 +1,5 @@
 <!-- Tickets -->
-<section class="tickets" id="tickets">
+<section class="tickets" id="scroll-tickets">
   <div class="tickets-inner">
     <header class="tickets-header">
       <h3 class="tickets-title">Get your tickets</h3>
