Showing only the list items that are relevant right now.

--- a/2018/src/html/room.ejs
+++ b/2018/src/html/room.ejs
@@ -11,9 +11,11 @@ var page = {
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Room</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
+        <div id="room-time" class="room-time"></div>
         <div id="rooms">
             <h1>Rooms</h1>
             <ul id="rooms">
