--- a/2018/src/html/room.ejs
+++ b/2018/src/html/room.ejs
@@ -42,6 +42,7 @@ var page = {
                     const entries = cal.rooms[room]
                     %>
                 <ul id="list-<%= calName + '-' + count %>" class="room-list">
+                    <li class="room-entry-closed room-entry-notstarted">Closed</li>
                     <% for (const entry of entries) {
                         const speaker = speakers[entry.person]
                         const slots = cal.toSlots()
@@ -67,7 +68,8 @@ var page = {
                             <%} %>
                     </li><%
                     }
-                %>
+                %>  
+                    <li class="room-entry-closed room-entry-finished">Closed</li>
                 </ul><%
                     count += 1
                 }
