Put clock component in a container for positioning with flexbox

--- a/2018/src/html/room.ejs
+++ b/2018/src/html/room.ejs
@@ -15,7 +15,9 @@ var page = {
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-        <div id="room-time" class="room-time"></div>
+        <div id="room-time-container">
+             <div id="room-time" class="room-time"></div>
+        </div>
         <div id="rooms">
             <h1>Rooms</h1>
             <ul id="rooms">
