Positioned and added styles to clock

--- a/2018/src/scss/main.scss
+++ b/2018/src/scss/main.scss
@@ -2749,3 +2749,21 @@ a.confcal-button-inactive {
     }
   }  
 }
+
+#room-time-container{
+  width: 100%;
+  display: flex;
+  position: sticky;
+  top: 0;
+}
+
+.room-time {
+  margin: 0.5em 1em 0 auto;
+  font-size: 1.5em;
+  background: #FFFFFF;
+  border:0.05em solid #00111C;
+  color: #CC4712;
+  padding: 0.1em 0.5em;
+  /*  box-shadow is from materialize css's website */
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
