--- a/2018/src/html/room.ejs
+++ b/2018/src/html/room.ejs
@@ -18,7 +18,7 @@ var page = {
         <div id="room-time-container">
              <div id="room-time" class="room-time"></div>
         </div>
-        <div id="rooms">
+        <div id="rooms-container">
             <h1>Rooms</h1>
             <ul id="rooms">
             <%
